--- a/home/test.html
+++ b/home/test.html
@@ -660,14 +660,14 @@
 								function(response) 
 								{
 								});
+
+							//initialise
+							$scope.get_lists();
+							$scope.set_to_home()
 				  		}, 
 				  		function(response) 
 				  		{
 						});
-
-					//initialise
-					//$scope.get_lists();
-					//$scope.set_to_home()
 			    }
 
 			    $scope.upd_prices_pub_country = function()
