--- a/home/test.html
+++ b/home/test.html
@@ -663,7 +663,7 @@
 
 							//initialise
 							$scope.get_lists();
-							$scope.set_to_home()
+							setTimeout($scope.set_to_home, 5000);
 				  		}, 
 				  		function(response) 
 				  		{
@@ -938,7 +938,6 @@
 			  		function(response) 
 			  		{
 					});
-					//setTimeout($scope.set_to_home, 5000);
 				}
 				$scope.set_to_home = function()
 				{
