--- a/home/test.html
+++ b/home/test.html
@@ -683,7 +683,7 @@
 					$scope.prices_pub_type_data_list = [];
 					if ($scope.prices_pub_country != null)
 					{
-					    $http.get('https://api.howmuchisapint.com/test/pub').
+					    $http.get('https://api.howmuchisapint.com/test/pub?token=' + $scope.token).
 							then(function(response)
 							{
 								for (p in response.data.pub)
@@ -733,7 +733,7 @@
 					$scope.prices_pub_type_data_list = [];
 					if ($scope.prices_pub_country != null)
 					{
-					    $http.get('https://api.howmuchisapint.com/test/pub').
+					    $http.get('https://api.howmuchisapint.com/test/pub?token=' + $scope.token).
 							then(function(response)
 							{
 								for (p in response.data.pub)
@@ -770,7 +770,7 @@
 					$scope.prices_pub = null;
 					$scope.prices_pub_type_data_list = [];
 					$scope.prices_pub_data_list = [];
-				    $http.get('https://api.howmuchisapint.com/test/pub').
+				    $http.get('https://api.howmuchisapint.com/test/pub?token=' + $scope.token).
 						then(function(response)
 						{
 							for (p in response.data.pub)
@@ -1395,7 +1395,7 @@
 				  		function(response) 
 				  		{
 						});
-				    $http.get('https://api.howmuchisapint.com/test/beerprice?tags=unverified').
+				    $http.get('https://api.howmuchisapint.com/test/beerprice?token=' + $scope.token + '&tags=unverified').
 						then(function(response)
 						{
 							for (i = 0; i < response.data['beer-price'].length; i++)
