--- a/home/test.html
+++ b/home/test.html
@@ -770,7 +770,7 @@
 					$scope.prices_pub = null;
 					$scope.prices_pub_type_data_list = [];
 					$scope.prices_pub_data_list = [];
-				    $http.get('https://api.howmuchisapint.com/test/pub?token=' + $scope.token).
+				    $	('https://api.howmuchisapint.com/test/pub?token=' + $scope.token).
 						then(function(response)
 						{
 							for (p in response.data.pub)
@@ -806,7 +806,7 @@
 					$scope.prices_pub_data_list = [];
 					if ($scope.prices_pub_type != null)
 					{
-					    $http.get('https://api.howmuchisapint.com/test/pub').
+					    $http.get('https://api.howmuchisapint.com/test/pub?token=' + $scope.token).
 							then(function(response)
 							{
 								for (p in response.data.pub)
@@ -846,7 +846,7 @@
 					$scope.prices_beer_data_list = [];
 					if ($scope.prices_beer_type != null)
 					{
-					    $http.get('https://api.howmuchisapint.com/test/beer').
+					    $http.get('https://api.howmuchisapint.com/test/beer?token=' + $scope.token).
 							then(function(response)
 							{
 								for (p in response.data.beer)
@@ -878,7 +878,7 @@
 				    	$scope.prices_display_fxrate = 1;
 						if ($scope.prices_ccy != $scope.prices_display_ccy)
 						{
-						    $http.get('https://api.howmuchisapint.com/test/fxrate/latest/' + $scope.prices_ccy + $scope.prices_display_ccy).
+						    $http.get('https://api.howmuchisapint.com/test/fxrate/latest/' + $scope.prices_ccy + $scope.prices_display_ccy + '?token=' + $scope.token).
 								then(function(response)
 								{
 									if (response.data['fx-rate'] !== undefined)
@@ -975,7 +975,7 @@
 					$scope.prices_pub_town = $scope.home_town;
 				    $scope.upd_prices_pub_town();
 	
-					var params = '?style=small';
+					var params = '?token=' + $scope.token + '&style=small';
 					params = params + '&pubCountry=' + $scope.home_country;
 					params = params + '&pubCity=' + $scope.home_city;
 					params = params + '&pubType=Pub';
@@ -1033,7 +1033,7 @@
 						});
 		  			$scope.headline_latest = [];
 		  			$scope.headline_latest_ccy_symbol = [];
-		    		$http.get('https://api.howmuchisapint.com/test/beerprice?page=1&pageSize=5&pubCountry=' + $scope.home_country).
+		    		$http.get('https://api.howmuchisapint.com/test/beerprice?token=' + $scope.token + '&page=1&pageSize=5&pubCountry=' + $scope.home_country).
 						then(function(response)
 						{
 				  			prices = response.data['beer-price'];
@@ -1069,7 +1069,7 @@
 					$scope.beer_data = '';
 					$scope.add_beer_info = '';
 					$scope.beer_err = '';
-					var params = '?style=small'
+					var params = '?token=' + $scope.token + '&style=small'
 					if ($scope.add_beer_tags.length > 0)
 					{
 						params = params + '&tags=' + $scope.add_beer_tags;
@@ -1115,7 +1115,7 @@
 					$scope.pub_data = '';
 					$scope.add_pub_info = '';
 					$scope.pub_err = '';
-					var params = '?style=small'
+					var params = '?token=' + $scope.token + '&style=small'
 					if ($scope.add_pub_tags.length > 0)
 					{
 						params = params + '&tags=' + $scope.add_pub_tags;
@@ -1170,7 +1170,7 @@
 				}
 			    $scope.get_prices_params = function(wethers)
 			    {
-					var params = '?style=small'
+					var params = '?token=' + $scope.token + '&style=small'
 					if ($scope.prices_tags.length > 0)
 					{
 						params = params + '&tags=' + $scope.prices_tags;
