--- a/home/test.html
+++ b/home/test.html
@@ -769,7 +769,7 @@
 					$scope.prices_pub = null;
 					$scope.prices_pub_type_data_list = [];
 					$scope.prices_pub_data_list = [];
-				    $	('https://api.howmuchisapint.com/test/pub?token=' + $scope.token).
+				    $http.get('https://api.howmuchisapint.com/test/pub?token=' + $scope.token).
 						then(function(response)
 						{
 							for (p in response.data.pub)
