--- a/home/test.html
+++ b/home/test.html
@@ -1036,11 +1036,11 @@
 						then(function(response)
 						{
 				  			prices = response.data['beer-price'];
+							console.log(prices)
 				  			c = 0
-				  			for (p in prices.sort(function(a, b){return a.date < b.date ? 1 : a.date > b.date ? -1 : 1 }))
+				  			for (p in prices) //.sort(function(a, b){return a.date < b.date ? 1 : a.date > b.date ? -1 : 1 }))
 				  			{
 					  			$scope.headline_latest[c] = prices[p];
-								console.log(prices[p])
 					  			price_ccy = ''
 								for (ctry in $scope.country_data_list['ref-data-country'])
 								{
