--- a/home/test.html
+++ b/home/test.html
@@ -497,16 +497,18 @@
 				$scope.token = null;
 				
 				$scope.all_tags = [];
+				$scope.beer_tags = [];
+				$scope.pub_tags = [];
 
 				$scope.add_beer_name = '';
-				$scope.add_beer_tags = [];
+				$scope.add_beer_tags = '';
 	
 				$scope.add_pub_name = '';
 				$scope.add_pub_country = 'United Kingdom';
 				$scope.add_pub_city = '';
 				$scope.add_pub_town = '';
 				$scope.add_pub_pc = '';
-				$scope.add_pub_tags = [];
+				$scope.add_pub_tags = '';
 	
 				$scope.add_price_amount = 0.00;
 				$scope.prices_pub_country = 'United Kingdom';
@@ -517,7 +519,7 @@
 				$scope.prices_pub = null;
 				$scope.prices_beer_type = null;
 				$scope.prices_beer = null;
-				$scope.prices_tags = [];
+				$scope.prices_tags = '';
 
 			    $scope.price_err = '';
 			    $scope.add_price_info = '';
