--- a/home/test.html
+++ b/home/test.html
@@ -557,7 +557,7 @@
 
 			    $scope.set_google_user = function(google_token, id, name, email)
 			    {
-	  				$scope.user = user;
+	  				$scope.user = id;
 					$scope.set_user(google_token)
 			    }
 				$scope.set_user = function(user)
