--- a/home/test.html
+++ b/home/test.html
@@ -37,7 +37,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="bg-image" style="background-size:cover;background-image:url('img/pension_logo.jpg');">
+				<div class="bg-image" style="background-size:cover;background-image:url('img/logo.png');">
 			  		<div class="mask" style="min-height: 70.9vh;background-color:rgba(0, 0, 0, 0.8);">
 						<div class="p-3">
 							<div class="shadow p-3 mb-4 text-light bg-dark bg-opacity-75">
