--- a/home/test.html
+++ b/home/test.html
@@ -28,7 +28,7 @@
 				<div class="p-3 text-light bg-dark">
 					<div class="row">
 						<div class="col">
-				    		<h2><span class="align-middle text-warning">HOW MUCH!</span><span class="align-middle text-secondary"> is a good old British pint of beer?</span><span class="align-middle text-danger ms-2"><i>{{env_msg}}</i></span></h2>
+				    		<h2><span class="align-middle text-warning">H O W  M U C H!</span><span class="align-middle text-secondary"> is a good old British pint of beer?</span><span class="align-middle text-danger ms-2"><i>{{env_msg}}</i></span></h2>
 						</div>
 					</div>
 					<div class="row mt">
@@ -182,6 +182,47 @@
 				}
 				$scope.get_ip();
 
+				$http.get("https://api.ipify.org?format=json").then(function(resp) {$scope.ip = resp.data.ip;console.log("ip="+$scope.ip);}, function(resp) {console.log(resp)});
+
+				$scope.accept_cookies = function()
+				{
+					$scope.use_cookies = true;
+					d = new Date();
+		  			d.setTime(d.getTime() + (100*24*60*60*1000));
+					document.cookie = "cookies=true;expires="+d.toUTCString()+";path=/";
+				}
+				$scope.read_cookie = function(cname) 
+				{
+					name = cname + "=";
+					cookie = decodeURIComponent(document.cookie);
+					ca = cookie.split(';');
+					for(i = 0; i < ca.length; i++) 
+					{
+						c = ca[i];
+						while (c.charAt(0) == ' ') 
+						{
+							c = c.substring(1);
+						}
+					   	if (c.indexOf(name) == 0) 
+						{
+					      return c.substring(name.length, c.length);
+					   	}
+					}
+					return "";
+				}
+				$scope.check_cookies = function()
+				{
+					$scope.use_cookies=$scope.read_cookie("cookies")=="true";
+					if ($scope.use_cookies)
+					{
+						$scope.frm_login.id=$scope.read_cookie("uid");
+						if ($scope.frm_login.id!="")
+						{
+							$scope.frm_login.remember=true;
+						}
+					}
+				}
+				$scope.check_cookies();
 			    $scope.set_google_user = function(google_token, id, name, email)
 			    {
 	  				$scope.user = google_token;
