--- a/home/test.html
+++ b/home/test.html
@@ -54,6 +54,18 @@
 									</span>  
 									<h6><span class="text-secondary ms-1">{{get_pub_title(r.pub)}} ({{r.pub.type}}), {{r.beer.name}} ({{r.beer.type}}) {{headline_latest_ccy_symbol[$index]}}{{get_number_display(r.price, 2)}}</span></h6>
 								</div>
+								<div class="row mt-3">
+									<div class="col">
+										<h6>
+											<span class="text-secondary">If you are not sure you understand how to answer these questions, or want to better plan for your retirement, <span class="text-warning">My Nut Pile</span> is designed to help. </span>
+											<a href="#" class="link-info text-decoration-none" ng-click="signup()">Sign up
+												<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+												  <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+												</svg>
+											</a>
+										</h6>
+									</div>
+								</div>
 							</div>
 						</div>
 						<div class="bg-image" style="background-size:cover;background-image:url('img/logo.png');">
