--- a/home/test.html
+++ b/home/test.html
@@ -155,6 +155,13 @@
 			var app = angular.module('app', []);
 			app.controller('appCtrl', function($scope, $http, $location, $window) 
 			{
+				$scope.api_path = "api.mynutpile.com/service";
+				$scope.service_path = "https://" + $scope.api_path;
+				$scope.env_msg = "";
+				$scope.request_error = "";
+				$scope.loggedin = false;
+				$scope.logginin = false;
+
 				$scope.user_type = 'GUEST';
 				$scope.user_name = '';
 				$scope.user_ip = '';
