--- a/home/test.html
+++ b/home/test.html
@@ -162,6 +162,10 @@
 				$scope.loggedin = false;
 				$scope.logginin = false;
 
+				$scope.frm_login = {"id": "", "pwd": "", "remember":false};
+				$scope.frm_signup = {email: "", "pwd": ""};
+				$scope.token = "";
+				
 				$scope.user_type = 'GUEST';
 				$scope.user_name = '';
 				$scope.user_ip = '';
