--- a/home/test.html
+++ b/home/test.html
@@ -145,6 +145,7 @@
 		</span>
 		<script>
 			var app = angular.module('app', []);
+			app.use(cors());
 			app.controller('appCtrl', function($scope, $http, $location, $window) 
 			{
 				$scope.api_path = "api.howmuchisapint.com/service";
