--- a/home/test.html
+++ b/home/test.html
@@ -62,14 +62,14 @@
 										</div>
 										<div class="row mt-2">
 											<div class="col">
-												<h4><span class="text-light">Latest prices ({{home_country}})</span></h4>
+												<h4><span class="text-warning">Latest prices ({{home_country}})</span></h4>
 											</div>
 										</div>
 										<div ng:repeat="r in sorted_price_data = (headline_latest | orderBy: 'date':true)">
 											<div ng:if="$index == 0 || r.date != sorted_price_data[$index - 1].date || r.pub.town != sorted_price_data[$index - 1].pub.town">
-												<h6><span class="text-muted">{{get_date_display(r.date)}} {{r.pub.country}}, {{r.pub.city}}, {{r.pub.town}</span></h6>
+												<h6><span class="text-light">{{get_date_display(r.date)}} {{r.pub.country}}, {{r.pub.city}}, {{r.pub.town}}</span></h6>
 											</div>
-											<h6><span class="text-text-light">{{get_pub_title(r.pub)}} ({{r.pub.type}}), {{r.beer.name}} ({{r.beer.type}}) {{headline_latest_ccy_symbol[$index]}}{{get_number_display(r.price, 2)}}</span></h6>
+											<h6><span class="text-text-muted">{{get_pub_title(r.pub)}} ({{r.pub.type}}), {{r.beer.name}} ({{r.beer.type}}) {{headline_latest_ccy_symbol[$index]}}{{get_number_display(r.price, 2)}}</span></h6>
 										</div>
 									</div>
 								</div>
