--- a/home/test.html
+++ b/home/test.html
@@ -73,8 +73,20 @@
 										</div>
 									</div>
 								</div>
-								<div id="bio" class="shadow p-3 mb-4 text-light bg-dark bg-opacity-75">
-									<div class="row">
+								</div>
+								<div id="agent" class="shadow p-3 mb-4 text-light bg-dark bg-opacity-75">
+									<div class="row mt-1">
+										<label class="form-label">Beer price agent
+											<a href="#" class="link-info text-decoration-none" data-bs-toggle="collapse" data-bs-target="#agent_info">
+												<span class="ms-2">
+													<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-square text-secondary" viewBox="0 0 16 16">
+													  <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+													  <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
+													</svg>
+												</span>
+											</a>
+											<span id="agent_info" class="collapse text-secondary ms-1">You can say things like...</span>
+										</label>
 										<div class="col">
 											<input class="form-control bg-dark text-light" type="text" id="agent_command" ng-model="agent.command" placeholder="Tell me the new price..." required>
 										</div>
